--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
 
@@ -16,26 +17,57 @@
 </head>
 <body>
 
-  Learn to code by watching others
+  <div class="container">
+  <div class="left">
+    <h1>Learn to code by watching others</h1>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+    <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+    but understanding how developers think is invaluable.</p>
 
-  Try it free 7 days then $20/mo. thereafter
+  </div>
+  
+  <div class="right">
+    <div class="box box-blue">
+      <p>
+        <strong>Try it free 7 days</strong> then $20/mo. thereafter
+      </p>
+    </div>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+    <form class="box"></form>
 
-  Claim your free trial 
+      <div class="form-control">
+        <input type="text" id="firstname" placeholder="First Name ">
+        <small>First Name cannot be empty</small>
+      </div>
+      <div class="form-control">
+        <input type="text" id="lastname" placeholder="Last Name">
+        <small>Last Name cannot be empty</small>
+      </div>
+      <div class="form-control"><input type="email" id="email" placeholder="Email Address">
+        <small>Looks like this is not an email</small>
+        <small>Email is not valid</small>
+      </div>
+      <div class="form-control">
+        <input type="password" id="password" placeholder="Password">
+        <small>Password cannot be empty</small>
+      </div>
 
-  By clicking the button, you are agreeing to our Terms and Services
+      <button>Claim your free trial</button>
+      <small>
+        By clicking the button, you are agreeing to our
+        <a href="">Terms and Services</a>
+      </small>
+      
+    </form>
+
+  </div>
+   
+  </div>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Adrian M</a>.
     </p>
   </footer>
 </body>
