--- a/index.html
+++ b/index.html
@@ -18,49 +18,49 @@
 <body>
 
   <div class="container">
-  <div class="left">
-    <h1>Learn to code by watching others</h1>
+    <div>
+      <h1>Learn to code by watching others</h1>
 
-    <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
-    but understanding how developers think is invaluable.</p>
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+      but understanding how developers think is invaluable.</p>
 
-  </div>
-  
-  <div class="right">
-    <div class="box box-blue">
-      <p>
-        <strong>Try it free 7 days</strong> then $20/mo. thereafter
-      </p>
     </div>
-
-    <form class="box"></form>
-
-      <div class="form-control">
-        <input type="text" id="firstname" placeholder="First Name ">
-        <small>First Name cannot be empty</small>
-      </div>
-      <div class="form-control">
-        <input type="text" id="lastname" placeholder="Last Name">
-        <small>Last Name cannot be empty</small>
-      </div>
-      <div class="form-control"><input type="email" id="email" placeholder="Email Address">
-        <small>Looks like this is not an email</small>
-        <small>Email is not valid</small>
-      </div>
-      <div class="form-control">
-        <input type="password" id="password" placeholder="Password">
-        <small>Password cannot be empty</small>
+  
+    <div>
+      <div class="box box-blue">
+        <p>
+          <strong>Try it free 7 days</strong> then $20/mo. thereafter
+        </p>
       </div>
 
-      <button>Claim your free trial</button>
-      <small>
-        By clicking the button, you are agreeing to our
-        <a href="">Terms and Services</a>
-      </small>
-      
-    </form>
+      <form class="box"></form>
 
-  </div>
+        <div class="form-control">
+          <input type="text" id="firstname" placeholder="First Name ">
+          <small>First Name cannot be empty</small>
+        </div>
+        <div class="form-control">
+          <input type="text" id="lastname" placeholder="Last Name">
+          <small>Last Name cannot be empty</small>
+        </div>
+        <div class="form-control"><input type="email" id="email" placeholder="Email Address">
+          <small>Looks like this is not an email</small>
+          <small>Email is not valid</small>
+        </div>
+        <div class="form-control">
+          <input type="password" id="password" placeholder="Password">
+          <small>Password cannot be empty</small>
+        </div>
+
+        <button>Claim your free trial</button>
+        <small>
+          By clicking the button, you are agreeing to our
+          <a href="">Terms and Services</a>
+        </small>
+        
+      </form>
+
+    </div>
    
   </div>
   
