Removes extra form tag

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
       </div>
 
-      <form class="box"></form>
+      <form class="box">
 
         <div class="form-control">
           <input type="text" id="firstname" placeholder="First Name ">
