Adds the id to the form, adds the style file and connection to html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </p>
       </div>
 
-      <form class="box">
+      <form id="form" class="box">
 
         <div class="form-control">
           <input type="text" id="firstname" placeholder="First Name ">
@@ -70,5 +70,7 @@
       Coded by <a href="#">Adrian M</a>.
     </p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
