--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="form-control">
           <input type="text" id="firstname" placeholder="First Name ">
-          <small>First Name cannot be empty</small>
+          <small></small>
         </div>
         <div class="form-control">
           <input type="text" id="lastname" placeholder="Last Name">
@@ -70,6 +70,6 @@
     </p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
