--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         </div>
         <div class="form-control">
           <input type="text" id="lastname" placeholder="Last Name">
-          <small>Last Name cannot be empty</small>
+          <small></small>
         </div>
         <div class="form-control"><input type="email" id="email" placeholder="Email Address">
-          <small>Email is not valid</small>
+          <small></small>
         </div>
         <div class="form-control">
           <input type="password" id="password" placeholder="Password">
-          <small>Password cannot be empty</small>
+          <small></small>
         </div>
 
         <button>Claim your free trial</button>
