--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="container">
     <div>
-      <h1>Learn to code by watching others</h1>
+      <h1>Learn to code by <br> watching others</h1>
 
       <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
       but understanding how developers think is invaluable.</p>
@@ -36,18 +36,23 @@
       <form id="form" class="box">
 
         <div class="form-control">
-          <input type="text" id="firstname" placeholder="First Name ">
+          <input type="text" id="firstname" placeholder="First Name">
+          <img src="./images/icon-error.svg" alt="icon-error">
           <small></small>
         </div>
         <div class="form-control">
           <input type="text" id="lastname" placeholder="Last Name">
+          <img src="./images/icon-error.svg" alt="icon-error">
           <small></small>
         </div>
-        <div class="form-control"><input type="email" id="email" placeholder="Email Address">
+        <div class="form-control">
+          <input type="email" id="email" placeholder="Email Address">
+          <img src="./images/icon-error.svg" alt="icon-error">
           <small></small>
         </div>
         <div class="form-control">
           <input type="password" id="password" placeholder="Password">
+          <img src="./images/icon-error.svg" alt="icon-error">
           <small></small>
         </div>
 
